# simplelinks

./: .gitignore  README.md  pyproject.toml
src/: gui.py  load.py  main.py  models.py
