[tool.poetry]
name = "List Mapper"
version = "0.1.0"
description = "Graph relationships between entities in list-based GUI."
authors = ["William Flynt"]

[tool.poetry.dependencies]
python = "^3.9"
PySimpleGUI = "^4.55.1"
graphviz = "^0.18.2"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.12.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
